update: beautifying the task adding process

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="/node_modules\magic.css\dist\magic.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TuuDuu</title>
+    <style>
+      .magictime {
+        --animation-speed: 200ms;
+        -webkit-animation-duration: var(--animation-speed);
+        animation-duration: var(--animation-speed);
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
